infra/k8s/overlays/prod/patch-client-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: closecount-client
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: client
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 2000m
              memory: 2Gi
