infra/k8s/overlays/prod/mongo-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: closecount-mongodb-headless
spec:
  clusterIP: None
  selector:
    app: closecount-mongodb
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
